--- a/books-app/src/App.css
+++ b/books-app/src/App.css
@@ -1,38 +1,61 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap');
+
 .App {
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+h1{
+  text-align: center;
+  left: 50%;
+  font-family: 'Roboto', sans-serif;
+  font-weight: 500;
+  margin-top: 24px;
+  font-size: 25px;
+
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+
+
+h1::after{
+  content: '';
+  position: absolute;
+  width: 330px;
+  height: 1.2px;
+  background-color: black;
+  text-align: center;
+  top: 66px;
+  left: 50%;
+  transform: translateX(-50%);
+
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.card-login {
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
+  border-radius: 8px;
+  background: linear-gradient(180deg, #F9FB96 0%, #FCFF7C 83.85%, #F7FA88 100%);
+  width: 90%;
+  text-align: center;
+  top: 97px;
+  height: 23%;
 }
 
-.App-link {
-  color: #61dafb;
+.footer-login{
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
+  top:315px;
+  margin-top:31px;
+  font-family: 'Roboto', sans-serif;
+  font-weight: 400;
+  width: 85%;
+  font-size: 14px;
+  line-height: 20px;
+
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.button-login {
+  margin-bottom: 8px;
+  width: 85%;
 }
