--- a/books-app/src/App.css
+++ b/books-app/src/App.css
@@ -14,8 +14,6 @@ h1{
 
 }
 
-
-
 h1::after{
   content: '';
   position: absolute;
@@ -28,6 +26,16 @@ h1::after{
   transform: translateX(-50%);
 
 }
+
+h2{
+  text-align: center;
+  left: 50%;
+  font-family: 'Roboto', sans-serif;
+  font-weight: 500;
+  margin-top: 24px;
+  font-size: 25px;
+}
+
 
 .card-login {
   position: absolute;
@@ -58,4 +66,69 @@ h1::after{
 .button-login {
   margin-bottom: 8px;
   width: 85%;
+}
+
+.button-add-books{
+width: auto;
+text-align: left;
+margin-left: 24px;
+    margin-top: 24px;
+    position: absolute;
+    left: 0;
+
+}
+
+.title-add-books{
+  font-weight: 700;
+  font-size: 16px;
+text-align: left;
+margin-left: 24px;
+    margin-top: 24px;
+    margin-bottom: 0;
+}
+
+.text-add-books{
+  
+  font-size: 14px;
+text-align: left;
+margin-left: 24px;
+   
+    margin-bottom: 0;
+}
+
+.card-add-books{ 
+
+  height: 18%;
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
+  border-radius: 8px;
+  background: linear-gradient(180deg, #F9FB96 0%, #FCFF7C 83.85%, #F7FA88 100%);
+  width: 90%;
+  text-align: center;
+  top: 97px;
+  
+
+}
+
+.my-facebook-button-class {
+  color: #fff;
+    background-color: #212529;
+    border-color: #212529;
+    display: inline-block;
+    font-weight: 400;
+    line-height: 1.5;
+    
+    text-align: center;
+    text-decoration: none;
+    vertical-align: middle;
+    cursor: pointer;
+    -webkit-user-select: none;
+    user-select: none;
+    
+    border: 1px solid transparent;
+    padding: 0.375rem 0.75rem;
+    font-size: 1rem;
+    border-radius: 0.25rem;
+
 }
