--- a/books-app/src/stories/Collection.css
+++ b/books-app/src/stories/Collection.css
@@ -13,30 +13,48 @@
   justify-content: center;
   position: absolute;
   top: 50%;
-  left: 50%;
+  margin-left: 24px;
   text-align: center;
-  transform: translateX(-50%);
-  
+  transform: translateY(-50%);
 }
 
+.collection-books::after {
+  content: "";
+  position: absolute;
+  width: 327px;
 
-.collection-books::after{
-    content: '';
-    position: absolute;
-    width: 327px;
-  
-    border: 1px solid rgba(0, 0, 0, 0.1);
-    background-color: rgba(0, 0, 0, 0.1);
-    text-align: center;
-    top: 120px;
-    left: 50%;
-    transform: translateX(-50%);
-
-  
-  }
-
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  background-color: rgba(0, 0, 0, 0.1);
+  text-align: center;
+  top: 120px;
+  left: 50%;
+  transform: translateX(-50%);
+}
 
 .collection-card {
-    margin-left: 10px;
-    
+  margin-left: 10px;
+}
+.collection-profile {
+  display: flex;
+  align-items: center;
+  position: absolute;
+  top: 40%;
+  left: 0;
+  text-align: center;
+  margin-left: 24px;
+ 
+}
+
+.collection-profile-image {
+  display: flex;
+  align-items: center;
+  width: 24px;
+  height: 24px;
+  border-radius: 50%;
+}
+
+.collection-profile-text {
+  margin-left: 8px;
+  font-size: 12px;
+  font-family: "Roboto", sans-serif;
 }
