--- a/books-app/src/stories/Collection.css
+++ b/books-app/src/stories/Collection.css
@@ -1,5 +1,18 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap");
 
+.collection {
+  display: contents;
+  flex-wrap: wrap;
+  justify-content: center;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  text-align: center;
+  transform: translate(-50% , -50%)
+}
+
+
+
 .image-book {
   width: 61px;
   height: 93px;
