--- a/books-app/src/stories/Collection.css
+++ b/books-app/src/stories/Collection.css
@@ -4,14 +4,9 @@
   display: contents;
   flex-wrap: wrap;
   justify-content: center;
-  position: absolute;
-  top: 50%;
-  left: 50%;
+
   text-align: center;
-  transform: translate(-50% , -50%)
 }
-
-
 
 .image-book {
   width: 61px;
@@ -24,11 +19,10 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  position: absolute;
-  top: 50%;
-  margin-left: 24px;
+  margin-bottom: 37px;
   text-align: center;
-  transform: translateY(-50%);
+  justify-content: flex-start;
+    margin-left: 24px;
 }
 
 .collection-books::after {
@@ -36,26 +30,21 @@
   position: absolute;
   width: 327px;
 
+  margin-top: 109px;
   border: 1px solid rgba(0, 0, 0, 0.1);
   background-color: rgba(0, 0, 0, 0.1);
   text-align: center;
-  top: 120px;
-  left: 50%;
-  transform: translateX(-50%);
 }
 
 .collection-card {
-  margin-left: 10px;
+  margin-right: 8px;
 }
 .collection-profile {
   display: flex;
   align-items: center;
-  position: absolute;
-  top: 40%;
-  left: 0;
+  margin-bottom: 21px;
   text-align: center;
-  margin-left: 24px;
- 
+  margin-top: 35px;
 }
 
 .collection-profile-image {
@@ -64,10 +53,15 @@
   width: 24px;
   height: 24px;
   border-radius: 50%;
+  margin-left: 24px;
 }
 
 .collection-profile-text {
   margin-left: 8px;
   font-size: 12px;
   font-family: "Roboto", sans-serif;
+}
+
+.collection-books-copy {
+  margin-top: 30px;
 }
