--- a/books-app/src/stories/Divisor.css
+++ b/books-app/src/stories/Divisor.css
@@ -1,28 +1,76 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap");
 
 .divisor {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+ /* margin-left: 24px;*/
 }
 
-.divisor-text {
-  line-height: 14px;
-  font-size: 12px;
-  font-family: "Roboto", sans-serif;
-  font-weight: 400;
-  transform: translate(-95%, -50%);
-  margin-bottom: 14px;
-}
 
 .divisor::after {
   content: "";
   position: absolute;
   width: 327px;
-  top: 0px;
+ margin-left: 24px;
   border: 1px solid #000000;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+ 
 }
+
+
+.divisor-text-amigues {
+  line-height: 14px;
+  font-size: 12px;
+  font-family: "Roboto", sans-serif;
+  font-weight: 400;
+  margin-left: 24px;
+  margin-bottom: 14px;
+  
+}
+
+.divisor-text-profile-amigue {
+  line-height: 14px;
+  font-size: 12px;
+  font-family: "Roboto", sans-serif;
+  font-weight: 400;
+  margin-left: 24px;
+  margin-bottom: 14px;
+  
+}
+
+.divisor-text-profile-own {
+  line-height: 14px;
+  font-size: 12px;
+  font-family: "Roboto", sans-serif;
+  font-weight: 400;
+  margin-left: 24px;
+  margin-bottom: 14px;
+}
+
+.divisor-text-profile-lendings{
+  line-height: 14px;
+  font-size: 12px;
+  font-family: "Roboto", sans-serif;
+  font-weight: 400;
+  margin-left: 24px;
+  margin-bottom: 14px;
+}
+
+
+.divisor-copy::after {
+  content: "";
+  position: absolute;
+  width: 327px;
+ margin-left: 24px;
+  border: 1px solid #000000;
+ 
+}
+
+.divisor-copy {
+  margin-top: 213px;
+
+}
+
+.divisor-copy-v2 {
+  margin-top: 90px;
+
+}
+
+
