--- a/books-app/src/stories/button.css
+++ b/books-app/src/stories/button.css
@@ -3,18 +3,20 @@
   background-color: #212529;
   border-color: #212529;
   display: inline-block;
-  font-weight: 400;
-  line-height: 1.5;
+  font-weight: 500;
+
   text-align: center;
   text-decoration: none;
-  vertical-align: middle;
-  cursor: pointer;
-  -webkit-user-select: none;
-  user-select: none;
+
   border: 1px solid transparent;
   padding: 0.375rem 0.75rem;
-  font-size: 1rem;
+  font-size: 12px;
+  line-height: 16px;
   border-radius: 0.25rem;
+  flex: none;
+  order: 0;
+  flex-grow: 0;
+  margin: 0px 8px;
 }
 
 .button-secondary-default {
@@ -31,8 +33,13 @@
   user-select: none;
   border: 1px solid #e0e0e0;
   padding: 0.375rem 0.75rem;
-  font-size: 1rem;
+  font-size: 12px;
+  line-height: 16px;
   border-radius: 0.25rem;
+  flex: none;
+  order: 0;
+  flex-grow: 0;
+  margin: 0px 8px;
 }
 
 .button-minimal-default {
@@ -49,6 +56,11 @@
   -webkit-user-select: none;
   user-select: none;
   padding: 0.375rem 0.75rem;
-  font-size: 1rem;
+  font-size: 12px;
+  line-height: 16px;
   border-radius: 0.25rem;
+  flex: none;
+  order: 0;
+  flex-grow: 0;
+  margin: 0px 8px;
 }
