--- a/books-app/src/stories/Divisor.css
+++ b/books-app/src/stories/Divisor.css
@@ -1,19 +1,16 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap");
 
 .divisor {
- /* margin-left: 24px;*/
+  /* margin-left: 24px;*/
 }
-
 
 .divisor::after {
   content: "";
   position: absolute;
   width: 327px;
- margin-left: 24px;
+  margin-left: 24px;
   border: 1px solid #000000;
- 
 }
-
 
 .divisor-text-amigues {
   line-height: 14px;
@@ -22,7 +19,6 @@
   font-weight: 400;
   margin-left: 24px;
   margin-bottom: 14px;
-  
 }
 
 .divisor-text-profile-amigue {
@@ -32,7 +28,6 @@
   font-weight: 400;
   margin-left: 24px;
   margin-bottom: 14px;
-  
 }
 
 .divisor-text-profile-own {
@@ -44,7 +39,7 @@
   margin-bottom: 14px;
 }
 
-.divisor-text-profile-lendings{
+.divisor-text-profile-lendings {
   line-height: 14px;
   font-size: 12px;
   font-family: "Roboto", sans-serif;
@@ -53,24 +48,28 @@
   margin-bottom: 14px;
 }
 
-
 .divisor-copy::after {
   content: "";
   position: absolute;
   width: 327px;
- margin-left: 24px;
+  margin-left: 24px;
   border: 1px solid #000000;
- 
 }
 
 .divisor-copy {
   margin-top: 213px;
-
 }
 
 .divisor-copy-v2 {
-  margin-top: 90px;
+  margin-top: 60px;
+}
 
+.divisor-copy-v3 {
+  margin-top: 25px;
+  margin-bottom: 32px;
 }
 
 
+.divisor-copy-v4 {
+  margin-top: 40px;
+}
