--- a/books-app/src/stories/Line.css
+++ b/books-app/src/stories/Line.css
@@ -1,7 +1,7 @@
 .line-divisor {
   position: absolute;
   margin-top: 16px;
-  left: 50%;
+  left: 24px;
   transform: translateX(-50%);
 }
 
@@ -12,6 +12,6 @@
   top: 0px;
   border: 1px solid #e5e5e5;
   top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+
+  transform: translateY( -50%);
 }
