--- a/books-app/src/stories/button.css
+++ b/books-app/src/stories/button.css
@@ -4,10 +4,8 @@
   border-color: #212529;
   display: inline-block;
   font-weight: 500;
-
   text-align: center;
   text-decoration: none;
-
   border: 1px solid transparent;
   padding: 0.375rem 0.75rem;
   font-size: 12px;
@@ -55,6 +53,70 @@
   cursor: pointer;
   -webkit-user-select: none;
   user-select: none;
+  padding: 0.375rem 0.75rem;
+  font-size: 12px;
+  line-height: 16px;
+  border-radius: 0.25rem;
+  flex: none;
+  order: 0;
+  flex-grow: 0;
+  margin: 0px 8px;
+}
+
+.button-primary-default-myprofile {
+  color: #fff;
+  background-color: #212529;
+  border-color: #212529;
+  display: inline-block;
+  font-weight: 500;
+  text-align: center;
+  text-decoration: none;
+  margin-left: 120px;
+  border: 1px solid transparent;
+  padding: 0.375rem 0.75rem;
+  font-size: 12px;
+  line-height: 16px;
+  border-radius: 0.25rem;
+  flex: none;
+  order: 0;
+  flex-grow: 0;
+}
+
+
+.button-primary-default-request {
+  color: #fff;
+  background-color: #212529;
+  border-color: #212529;
+  display: inline-block;
+  font-weight: 500;
+  text-align: center;
+  text-decoration: none;
+  
+  border: 1px solid transparent;
+  padding: 0.375rem 0.75rem;
+  font-size: 12px;
+  line-height: 16px;
+  border-radius: 0.25rem;
+  flex: none;
+  order: 0;
+  flex-grow: 0;
+}
+
+
+
+.button-secondary-default-request {
+  color: #828282;
+  background-color: transparent;
+  display: inline-block;
+  font-weight: 400;
+  line-height: 1.5;
+  text-align: center;
+  text-decoration: none;
+  vertical-align: middle;
+  cursor: pointer;
+  -webkit-user-select: none;
+  user-select: none;
+  border: 1px solid #e0e0e0;
   padding: 0.375rem 0.75rem;
   font-size: 12px;
   line-height: 16px;
