--- a/books-app/src/stories/Request.css
+++ b/books-app/src/stories/Request.css
@@ -46,3 +46,16 @@ line-height: 14px;
    margin-top: 14px;
     margin-left: 91px;
 }
+
+
+.no-button-lendOK {
+    display: none;
+}
+
+
+.stateLend {
+    display: contents;
+
+
+}
+
