--- a/books-app/src/stories/State.css
+++ b/books-app/src/stories/State.css
@@ -22,6 +22,9 @@ color: #30AF04;
 .icon-none {
     display: none;
 }
+.icon3-none {
+    display: none;
+}
 
 .yellow {
     margin-left: 10px;
@@ -43,4 +46,18 @@ color: #30AF04;
     font-size: 12px;
 line-height: 14px;
 font-family: 'Roboto', sans-serif;
+}
+
+.red {
+    margin-left: 25px;
+    margin-top: 10px;
+    font-size: 12px;
+line-height: 14px;
+font-family: 'Roboto', sans-serif;
+}
+
+.redIcon {
+    vertical-align: text-top;
+    margin-right: 3px;
+    margin-top: 3px;
 }
